--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,14 @@
 			<scope>test</scope>
 		</dependency>
 
+<!--		token-->
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>4.2.1</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
