--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,17 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>med.voll</groupId>
-	<artifactId>api</artifactId>
+	<artifactId>api-Sistema-medico</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>api</name>
 	<description>Api Rest da aplicação voll.med</description>
 	<properties>
 		<java.version>17</java.version>
+
+
+
+<!--		<maven.compiler.source>17</maven.compiler.source>-->
+<!--		<maven.compiler.target>8</maven.compiler.target>-->
 	</properties>
 	<dependencies>
 		<dependency>
@@ -79,6 +84,13 @@
 			<artifactId>java-jwt</artifactId>
 			<version>4.2.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.2.0</version>
+		</dependency>
+
 
 
 	</dependencies>
